--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gh-pages": "^3.2.3",
     "material-ui": "^0.20.2",
     "react": "^17.0.2",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
